<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/txtSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Saludo"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNotificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Notificaciones"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txtSaludo"
        app:layout_constraintStart_toStartOf="@+id/txtSaludo"
        app:layout_constraintTop_toBottomOf="@+id/txtSaludo" />

    <Button
        android:id="@+id/btnListado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Listado"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnNotificaciones"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/btnNotificaciones"
        app:layout_constraintTop_toBottomOf="@+id/btnNotificaciones" />

    <Button
        android:id="@+id/btnListadoNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ListadoNotas"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnListado"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/btnListado"
        app:layout_constraintTop_toBottomOf="@+id/btnListado"
        app:layout_constraintVertical_bias="0.093" />
</android.support.constraint.ConstraintLayout>